discussion/kv_engine/183265/183265_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54516: Drop ModifyCollection events

If a collection is dropped, the modify event must be purged
along with any normal collection items. All of the dropKey
paths were setup to ignore any system events, this is no
longer true with the new event.

Change-Id: Ia89d4b7a56e9f3b5b23dd176e5d00da88bd83f3e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-29 13:43:03.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-29 13:43:41.000000000
Message: 
Patch Set 5: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/326952/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-29 14:35:22.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/628/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23: error: use of undeclared identifier "SystemEventFactory" [clang-diagnostic-error]
        auto modify = SystemEventFactory::isModifyCollection(key);
                      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/628/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/628/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/603/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/603/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/790/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/collections/scan_context.cc(38): error C2653: "SystemEventFactory": is not a class or namespace name ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/790/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/628/ : FAILURE

Compile error at [2022-11-29T13:49:26.563Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: ?SystemEventFactory? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/628/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/650/ : FAILURE

Failure of GoogleTest "CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only":

<pre>
[ RUN      ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
[2022-11-29T14:14:16.372Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:478: Failure
[2022-11-29T14:14:16.372Z] Value of: dropped.empty()
[2022-11-29T14:14:16.372Z]   Actual: false
[2022-11-29T14:14:16.372Z] Expected: true
[2022-11-29T14:14:16.372Z] [  FAILED  ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (21 ms)
CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/650/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/647/ : FAILURE

Compile error at [2022-11-29T14:06:40.311Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/647/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/638/ : FAILURE

Compile error at [2022-11-29T14:34:38.191Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: ?SystemEventFactory? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/638/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/638/ : FAILURE

Failure of GoogleTest "CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only":

<pre>
[ RUN      ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
[2022-11-29T14:00:51.477Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:478: Failure
[2022-11-29T14:00:51.477Z] Value of: dropped.empty()
[2022-11-29T14:00:51.477Z]   Actual: false
[2022-11-29T14:00:51.477Z] Expected: true
[2022-11-29T14:00:51.477Z] [  FAILED  ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (33 ms)
CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/638/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/888/ : FAILURE

Failure of GoogleTest "CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only":

<pre>
[ RUN      ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
[2022-11-29T14:22:26.214Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:478: Failure
[2022-11-29T14:22:26.214Z] Value of: dropped.empty()
[2022-11-29T14:22:26.214Z]   Actual: false
[2022-11-29T14:22:26.214Z] Expected: true
[2022-11-29T14:22:26.214Z] [  FAILED  ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (16 ms)
CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/888/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/620/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21537/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
